src/routes/styles.css
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&family=Source+Serif+Pro:wght@400;600&display=swap');

:root {
	--font-body: 'Source Sans Pro';
	--font-serif: 'Source Serif Pro';

	--font-weight-thin: 300;
	--font-weight-normal: 400;
	--font-weight-sb: 600;

	--color-body-bg: #ffffff;
	--color-body-text: #181818;
	--color-body-bg-rgb: 255, 255, 255;
	--color-black: #000000;

	--grey-100: #f0f0f0;
	--grey-150: #f9f9f9;
	--grey-200: #ececec;
	--grey-300: #999999;
	--grey-400: #666666;
	--grey-500: #2c2c2c;

	--spacing-6: 6px;
	--spacing-8: 8px;
	--spacing-12: 12px;
	--spacing-24: 24px;
	--spacing-36: 36px;
	--spacing-48: 48px;
	--spacing-96: 96px;
	--padding-section: var(--spacing-48) var(--spacing-24);

	--font-size-xl: 20px;
	--font-size-lg: 18px;
	--font-size-normal: 16px;
	--font-size-sm: 14px;
}

h1:not(:empty),
h2:not(:empty),
h3:not(:empty),
.h1:not(:empty),
.h2:not(:empty),
.h3:not(:empty) {
	font-family: var(--font-body);
	font-weight: var(--font-weight-sb);
	font-style: normal;
	line-height: 125%;
	margin: 0;
}

h1:not(:empty),
.h1:not(:empty) {
	font-size: var(--font-size-xl);
}

h2:not(:empty),
.h2:not(:empty) {
	font-size: var(--font-size-xl);
	/* margin-bottom: var(--spacing-12); */
}

h3:not(:empty),
.h3:not(:empty) {
	font-size: var(--font-size-lg);
}

html {
	scroll-behavior: smooth;
	line-height: 1.25;
	-webkit-text-size-adjust: 100%;
}

body {
	width: 100%;
	min-height: 100dvh;
	min-height: 100vh;
	overflow-x: hidden;
	margin: 0;
	padding: 0;
	color: var(--color-body-text);
	background-color: var(--color-body-bg);
	font-family: var(--font-body);
	font-weight: var(--font-weight-normal);
	font-size: var(--font-size-lg);
	line-height: 1.25;
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
}

* {
	margin: 0;
	padding: 0;
	font: inherit;
}

p {
	margin-bottom: var(--spacing-12);
}

img,
picture,
video {
	display: block;
	max-width: 100%;
	border-style: none;
}

/* svg {
	width: 20px;
	aspect-ratio: 1;
} */

hr {
	border: none;
	width: 100%;
	height: 1px;
	background-color: var(--grey-200);
}

a:not(.button) {
	color: var(--color-black);
	text-decoration: underline;
}

a.button {
	text-decoration: none;
}

.bold {
	font-weight: var(--font-weight-sb);
}

/* // BUTTONS */

.buttons {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
	gap: var(--spacing-12);
}

.button {
	padding-inline: var(--spacing-24);
	height: 44px;
	border-width: 1px;
	border-style: solid;
	box-sizing: border-box;
	border-radius: 50px;
	cursor: pointer;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	font-family: var(--font-body);
	font-weight: 600;
	font-size: var(--font-size-normal);
	transition: border-color 0.2s, background-color 0.2s, color 0.2s;
	white-space: nowrap;

	&:disabled {
		cursor: not-allowed;
	}

	.wrapper {
		width: 20px;
		height: 20px;
		margin-right: var(--spacing-6);
	}

	&.primary {
		color: var(--color-body-bg);
		border-color: var(--color-body-text);
		background-color: var(--color-body-text);

		& :global(svg) {
			fill: var(--color-body-bg);
		}

		&:disabled {
			background-color: var(--grey-200);
			border-color: var(--grey-200);
			color: var(--color-body-bg);
		}

		&:active:not(:disabled),
		&:hover:not(:disabled) {
			border-color: var(--color-black);
			background-color: var(--color-black);
			transition: border-color 0.2s, background-color 0.2s;
		}

		@media (prefers-color-scheme: dark) {
			&:disabled {
				background-color: var(--grey-200);
				color: var(--color-body-bg);

				& :global(svg) {
					fill: var(--color-body-bg);
				}
			}

			&:active:not(:disabled),
			&:hover:not(:disabled) {
				transition: border-color 0.2s, background-color 0.2s;
			}
		}
	}

	&.secondary {
		background-color: transparent;
		border-color: var(--color-body-text);
		color: var(--color-body-text);

		& :global(svg) {
			fill: var(--color-body-text);
		}

		&:disabled {
			color: var(--grey-200);

			& :global(svg) {
				fill: var(--grey-200);
			}
		}

		&:active:not(:disabled),
		&:hover:not(:disabled) {
			background-color: var(--grey-150);
			transition: border-color 0.2s, background-color 0.2s;
		}

		@media (prefers-color-scheme: dark) {
			background-color: var(--color-body-bg);
			border-color: var(--color-body-text);
			color: var(--color-body-text);

			& :global(svg) {
				fill: var(--color-body-text);
			}

			&:disabled {
				background-color: var(--color-body-bg);
				color: var(--grey-500);

				& :global(svg) {
					fill: var(--grey-500);
				}
			}

			&:active:not(:disabled),
			&:hover:not(:disabled) {
				transition: border-color 0.2s, background-color 0.2s;
			}
		}
	}
}

section,
footer {
	padding: var(--padding-section);
	display: flex;
	gap: var(--spacing-48);
	flex-direction: column;

	.section-header {
		margin-bottom: 48px;
	}

	&#trynow {
		.buttons {
			margin-top: 36px;
		}
	}
}

.cols {
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	gap: var(--spacing-48);
	max-width: 450px;
	margin-inline: auto;
}

.col {
	display: flex;
	flex-direction: column;
	gap: var(--spacing-12);
	flex-basis: 100%;
	max-width: 450px;

	.buttons {
		justify-content: flex-start;
	}
}

.subtitle {
	font-size: 20px;
}

.intro {
	max-width: 750px;

	span {
		font-family: var(--font-serif);
		font-style: italic;
	}
}

footer {
	background-color: var(--color-body-text);
	color: var(--color-body-bg);
	font-weight: var(--font-weight-thin);

	.buttons {
		margin-top: var(--spacing-12);
		margin-bottom: var(--spacing-48);

		.button {
			color: var(--color-body-bg);
			font-size: var(--font-size-sm);

			&.secondary {
				color: var(--color-body-bg);
				border-color: var(--grey-400);
			}
		}
	}

	.copyright {
		color: var(--grey-400);
	}

	svg {
		fill: var(--color-body-bg);
	}
}

footer {
	text-align: center;

	.col {
		max-width: 450px;
		margin-inline: auto;

		.buttons {
			justify-content: center;
		}
	}
}

@media (min-width: 398px) {
	:root {
		--padding-section: var(--spacing-96) var(--spacing-48);
	}

	.subtitle {
		font-size: 24px;
	}

	footer {
		padding-block: var(--spacing-48);
	}
}

@media (min-width: 668px) {
	/* h1:not(:empty),
	.h1:not(:empty) {
		font-size: var(--font-size-xl);
	}

	h2:not(:empty),
	.h2:not(:empty) {
		font-size: var(--font-size-lg);
		margin-bottom: var(--spacing-12);
	}

	h3:not(:empty),
	.h3:not(:empty) {
		font-size: var(--font-size-normal);
	} */

	footer {
		padding: var(--spacing-48);
	}
}

@media (min-width: 1242px) {
	footer {
		text-align: left;

		.col {
			margin-left: 0;

			.buttons {
				justify-content: flex-start;
			}
		}
	}
}

